--- a/app/src/main/res/layout/activity_armgame.xml
+++ b/app/src/main/res/layout/activity_armgame.xml
@@ -7,10 +7,26 @@
     android:layout_height="match_parent"
     android:background="@drawable/armbackground">
 
+    <TextView
+        android:id="@+id/invisbtn"
+        android:layout_width="350dp"
+        android:layout_height="114dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="false"
+        android:onClick="Missclick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
     <ImageView
         android:id="@+id/käsiview"
         android:layout_width="wrap_content"
-        android:layout_height="245dp"
+        android:layout_height="242dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
