--- a/app/src/main/res/layout/activity_bar.xml
+++ b/app/src/main/res/layout/activity_bar.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="8dp"
         android:background="@android:drawable/alert_dark_frame"
         android:fontFamily="serif-monospace"
-        android:text="Bar"
+        android:text="@string/bar"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
         android:textSize="45sp"
@@ -39,14 +39,16 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="82dp"
+        android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:drawable/screen_background_light_transparent"
-        android:text="Who's Here"
+        android:text="@string/whoshere"
+        android:textColor="@color/common_google_signin_btn_text_light_pressed"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.025"
@@ -130,7 +132,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Challenged"
+        android:text="@string/challenged"
         android:textColor="@color/com_facebook_button_background_color_focused"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -214,6 +216,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:background="@drawable/redbtn"
+        android:onClick="hideAll"
         android:text="@string/decline"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -319,7 +322,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
         android:textColor="@color/fui_bgTwitter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -472,11 +474,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/placebet"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.789"
+        app:layout_constraintHorizontal_bias="0.819"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.362" />
+        app:layout_constraintVertical_bias="0.393" />
 
 </android.support.constraint.ConstraintLayout>
